# SourcedOut

./: CMakeLists.txt  README.md  conanfile.txt  config.sh
src/: main.cpp
text-basic-metrics/: tbm_main.cpp
