set(CMAKE_CXX_STANDARD 17)
cmake_minimum_required(VERSION 3.19)
set(CMAKE_PREFIX_PATH build)
project(SourcedOut CXX)
find_package(antlr4-runtime REQUIRED)
find_package(Boost 1.8.1 REQUIRED)
message(STATUS ${Boost_LIBRARIES})
add_executable(${PROJECT_NAME} src/main.cpp)
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${antlr4-runtime_LIBRARIES})